# gp32emu

./: .gitignore  CMakeLists.txt  GP32emu.pro  Makefile.libretro  Makefile.linux  Makefile.sdl  Makefile.wasm  Makefile.win64  README.md  gp32emu_libretro.info
docs/: BLUE_ANGELO_SHADOW_LUT.md  mame_gp32_extract_notes.md
docs/libretro/: README_LIBRETRO.md
include/gp32emu/: gp32.h  platform.h  video_effects.h
licenses/: BSD-3-Clause-MAME-derived.txt
packaging/: gp32emu.desktop  make_appimage.sh
resources/: gp32emu.qrc
scripts/: build_sdl3_mingw.sh
src/: arm920t.c  arm920t.h  common.h  fpk.c  fpk.h  fxe.c  fxe.h  gp32.c  gp32_zip.c  headless_main.c  input_script.c  input_script.h  s3c2400.c  s3c2400.h  sdl12_main.c  sdl3_main.c  smartmedia.c  smartmedia.h  smc_direct.c  smc_direct.h  zip.h
src/audio/: gp32_audio_resampler.c  gp32_audio_resampler.h
src/input/: gp32_sdl3_input_shared.c  gp32_sdl3_input_shared.h
src/libretro/: libretro.c  libretro.h
src/media/: gp32_media.c  gp32_media.h  gp32_video_effects.c
src/platform/: platform.c  platform_internal.h
src/platform/sdl12/: audio.c  common.c  common.h  input.c  video.c
src/platform/sdl3/: audio.c  common.c  common.h  input.c  video.c
src/qt/: GP32Engine.cpp  GP32Engine.h  GP32MainWindow.cpp  GP32MainWindow.h  GP32VideoWidget.cpp  GP32VideoWidget.h  main.cpp
src/win64/: gp32_win64_audio.c  gp32_win64_audio.h  gp32_win64_main.c  gp32_win64_sdl_input.c  gp32_win64_sdl_input.h  gp32_win64_video.c  gp32_win64_video.h  gp32emu.rc
wasm/: gp32_wasm_core.c
wasm/libc/include/: assert.h  ctype.h  dirent.h  endian.h  errno.h  fcntl.h  inttypes.h  libgen.h  math.h  stdio.h  stdlib.h  string.h  strings.h  time.h  unistd.h  wchar.h
wasm/libc/include/sys/: stat.h  time.h  types.h
wasm/libc/src/: pcfx_wasm_libc.c
web/: gp32-audio-worklet.js  gp32-wasm.js  index.html  style.css
